<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.group4.thermostat.Thermostat">

    <group android:id="@+id/group_uninstall"
        android:orderInCategory="100"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_uninstall"
            android:title="@string/action_uninstall"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/group_schedule"
        android:orderInCategory="100"
        android:checkableBehavior="none">
    <item
        android:id="@+id/action_schedule"
        android:title="@string/action_schedule"
        app:showAsAction="never" />
    </group>

    <group android:id="@+id/group_mode"
        android:checkableBehavior="single"
        android:orderInCategory="200">
        <item
            android:id="@+id/mode_heat"
            android:title="@string/heat_mode"
            app:showAsAction="never"/>
        <item
            android:id="@+id/mode_cool"
            android:title="@string/cool_mode"
            app:showAsAction="never"/>
        <item
            android:id="@+id/mode_off"
            android:title="@string/off_mode"
            app:showAsAction="never"/>
    </group>

</menu>
